--- a/index.html
+++ b/index.html
@@ -1426,7 +1426,7 @@
                       <a href="#">About</a>
                     </li>
                     <li class="menu-item pb-2">
-                      <a href="#">Shop</a>
+                      <a href="shop.html">Shop</a>
                     </li>
                     
                 <li class="nav-item dropdown">
